--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ over zijn of haar gegevens.
 <h2>6. Contact</h2>
 <p>
 Voor vragen over dit privacybeleid kunt u contact opnemen via:<br>
-<strong>support@shiftproof.app</strong>
+<strong>edevcreations@gmail.com</strong>
 </p>
 
 </body>
